// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlocksReplacer Метод replaceManyBlocks Корректно возвращает блоки неизменными При отсутствии текстовых блоков 1`] = `
Array [
  Object {
    "code": "<code></code>",
    "type": "code",
  },
  Object {
    "table": Object {
      "data": Array [
        Array [
          "Строка 1",
        ],
        Array [
          "Строка 2",
        ],
      ],
      "title": "Заголовок таблицы",
    },
    "type": "table",
  },
]
`;

exports[`BlocksReplacer Метод replaceOneBlock Корректно возвращает ошибку При передаче недопустимого типа блока 1`] = `"Тип блока UNSOPPERTED не поддерживается"`;

exports[`BlocksReplacer Метод replaceOneBlock Корректно заменяет ссылки В блоке с типом bubble 1`] = `
Object {
  "bubble": Object {
    "content": "REPLACED",
  },
  "type": "bubble",
}
`;

exports[`BlocksReplacer Метод replaceOneBlock Корректно заменяет ссылки В блоке с типом card 1`] = `
Object {
  "card": Object {
    "text": "REPLACED",
  },
  "type": "card",
}
`;

exports[`BlocksReplacer Метод replaceOneBlock Корректно заменяет ссылки В блоке с типом text 1`] = `
Object {
  "text": "REPLACED",
  "type": "text",
}
`;
